--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ beautifulsoup4==4.8.2
 Django==3.0.4
 django-bootstrap4==1.1.1
 django-cors-headers==3.2.1
+django-filter==2.2.0
 django-templated-mail==1.1.1
 djangorestframework==3.11.0
 djangorestframework-simplejwt==4.4.0
